k8s/businessservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: businessservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: businessservice
  template:
    metadata:
      labels:
        app: businessservice
    spec:
      containers:
        - name: businessservice
          image: dattingen.azurecr.io/businessservice:prod
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: businessservice
spec:
  selector:
    app: businessservice
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP  # Internal only
