k8s/rulesetservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rulesetservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rulesetservice
  template:
    metadata:
      labels:
        app: rulesetservice
    spec:
      containers:
        - name: rulesetservice
          image: dattingen.azurecr.io/rulesetservice:prod
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: rulesetservice
spec:
  selector:
    app: rulesetservice
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP  # Internal only
