k8s/securityservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securityservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: securityservice
  template:
    metadata:
      labels:
        app: securityservice
    spec:
      containers:
        - name: securityservice
          image: <your-acr>.azurecr.io/securityservice:prod
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: securityservice
spec:
  selector:
    app: securityservice
  ports:
    - port: 8084
      targetPort: 8084
  type: ClusterIP  # Internal only
