k8s/securityservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securityservice
spec:
  selector:
    app: securityservice
  ports:
    - port: 8084
      targetPort: 8084
  type: ClusterIP  # Internal only (default)
