k8s/userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: <your-acr>.azurecr.io/userservice:prod
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  selector:
    app: userservice
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP  # Internal only
